# weather_insights_and_forecast_advisor

./: deploy_agents_lab.sh  firebase.agents.json  pyproject.toml  test_alerts_filtering.py  test_alerts_real_api.py
agents/: restart.sh  test_chat_a2a.sh
agents/alerts_snapshot_agent/: agent.json  agent.py
agents/alerts_snapshot_agent/tools/: __init__.py  tools.py
agents/chat/: A2A_IMPLEMENTATION.md  TEST_REMOTE_AGENTS.md  agent.py  remote_weather_agents.py
agents/chat/sub_agents/alerts_snapshot_agent/: agent.py
agents/chat/sub_agents/emergency_resources_agent/: agent.py
agents/chat/sub_agents/google_search_agent/: agent.py
agents/chat/sub_agents/risk_analysis_agent/: agent.py
agents/chat/sub_agents/weather_map_agent/: __init__.py  agent.py
agents/chat/tools/: tools.py
agents/emergency_resources_agent/: agent.json  agent.py
agents/forecast_agent/: agent.json  requirements.txt
agents/hurricane_simulation_agent/: agent.json  requirements.txt
agents/risk_analysis_agent/: agent.py  weather-risk-analysis-agent-card.json
agents/shared_tools/: tools.py
agents/weather_map_agent/: agent.py
agents/weather_map_agent/tools/: logging_utils.py  tools.py
frontend/src/components/: RiskAnalysisModal.jsx  SevereWeatherCard.jsx  TourGuide.jsx
frontend/src/contexts/: TourContext.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: Alerts.jsx  Dashboard.jsx  Forecast.jsx
frontend/src/services/: api.js
